--- a/index.html
+++ b/index.html
@@ -25,18 +25,9 @@
 <button class="start-btn">Start Quiz</button>
 </div>
 <div class="inline-controls">
-<span class="inline-icon">
-<svg fill="white" height="16" viewbox="0 0 24 24" width="16"><path d="M20.3 5.7a1 1 0 00-1.4-1.4L9 14.17l-3.9-3.9a1 1 0 10-1.4 1.42l4.6 4.6a1 1 0 001.4 0l11-11z"></path></svg>
-</span>
-<span>Smart Learning</span>
-<span class="inline-icon">
-<svg fill="white" height="16" viewbox="0 0 24 24" width="16"><rect height="11" width="3" x="3" y="10"></rect><rect height="15" width="3" x="10" y="6"></rect><rect height="19" width="3" x="17" y="2"></rect></svg>
-</span>
-<span>View Analytics</span>
-<span class="inline-icon">
-<svg fill="white" height="16" viewbox="0 0 24 24" width="16"><path d="M19.43 12.98a7.98 7.98 0 000-1.96l2.11-1.65a1 1 0 00.24-1.32l-2-3.46a1 1 0 00-1.28-.44l-2.49 1a7.974 7.974 0 00-1.69-.98L14.5 2.5a1 1 0 00-1-.5h-4a1 1 0 00-1 .5l-.38 2.59a7.974 7.974 0 00-1.69.98l-2.49-1a1 1 0 00-1.28.44l-2 3.46a1 1 0 00.24 1.32l2.11 1.65a7.98 7.98 0 000 1.96l-2.11 1.65a1 1 0 00-.24 1.32l2 3.46a1 1 0 001.28.44l2.49-1c.53.39 1.1.72 1.69.98L8.5 21.5a1 1 0 001 .5h4a1 1 0 001-.5l.38-2.59c.59-.26 1.16-.59 1.69-.98l2.49 1a1 1 0 001.28-.44l2-3.46a1 1 0 00-.24-1.32l-2.11-1.65zM12 15a3 3 0 110-6 3 3 0 010 6z"></path></svg>
-</span>
-<span>Settings</span>
+<div class="inline-pair"><svg fill="white" height="16" viewBox="0 0 24 24" width="16"><path d="M20.3 5.7a1 1 0 00-1.4-1.4L9 14.17l-3.9-3.9a1 1 0 10-1.4 1.42l4.6 4.6a1 1 0 001.4 0l11-11z"></path></svg><span>Smart Learning</span></div>
+<div class="inline-pair"><svg fill="white" height="16" viewBox="0 0 24 24" width="16"><rect height="11" width="3" x="3" y="10"></rect><rect height="15" width="3" x="10" y="6"></rect><rect height="19" width="3" x="17" y="2"></rect></svg><span>View Analytics</span></div>
+<div class="inline-pair"><svg fill="white" height="16" viewBox="0 0 24 24" width="16"><path d="M19.43 12.98a7.98 7.98 0 000-1.96l2.11-1.65a1 1 0 00.24-1.32l-2-3.46a1 1 0 00-1.28-.44l-2.49 1a7.974 7.974 0 00-1.69-.98L14.5 2.5a1 1 0 00-1-.5h-4a1 1 0 00-1 .5l-.38 2.59a7.974 7.974 0 00-1.69.98l-2.49-1a1 1 0 00-1.28.44l-2 3.46a1 1 0 00.24 1.32l2.11 1.65a7.98 7.98 0 000 1.96l-2.11 1.65a1 1 0 00-.24 1.32l2 3.46a1 1 0 001.28.44l2.49-1c.53.39 1.1.72 1.69.98L8.5 21.5a1 1 0 001 .5h4a1 1 0 001-.5l.38-2.59c.59-.26 1.16-.59 1.69-.98l2.49 1a1 1 0 001.28-.44l2-3.46a1 1 0 00-.24-1.32l-2.11-1.65zM12 15a3 3 0 110-6 3 3 0 010 6z"></path></svg><span>Settings</span></div>
 </div>
 </header>
 <div class="quiz-card">
