--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>Massage Therapy Smart Study Pro</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
-  <link rel="icon" href="icon.png" type="image/png"/>
-  <script defer src="app.js"></script>
+  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="/icon-192x192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link href="styles.css" rel="stylesheet"/>
+  <script defer src="app.js"></script>
 </head>
 <body>
   <div class="app-container">
     <header class="title-bar-box">
       <div class="title-bar">
-        <img alt="App Icon" class="app-icon" src="icon.png"/>
+        <img alt="App Icon" class="app-icon" src="icon-512x512.png"/>
         <div class="title-text">
           <h1>Massage Therapy</h1>
           <h2>Smart Study Pro</h2>
