--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <title>Massage Therapy Smart Study Pro</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="/icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-512x512.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link href="styles.css" rel="stylesheet"/>
   <script defer src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <div class="app-container">
@@ -35,26 +37,28 @@
       <div class="header-actions" style="display: flex; gap: 24px; align-items: center; justify-content: space-evenly;">
         <div class="smart-learning">
           <a href="#" class="settings-link" style="text-decoration: none; color: white; display: flex; align-items: center;">
-        <svg fill="white" height="16" viewBox="0 0 24 24" width="16" style="vertical-align: middle; margin-right: 8px;">
-          <path d="M20.3 5.7a1 1 0 00-1.4-1.4L9 14.17l-3.9-3.9a1 1 0 10-1.4 1.42l4.6 4.6a1 1 0 001.4 0l11-11z"></path>
-        </svg> Smart Learning
+            <svg fill="white" height="16" viewBox="0 0 24 24" width="16" style="vertical-align: middle; margin-right: 8px;">
+              <path d="M20.3 5.7a1 1 0 00-1.4-1.4L9 14.17l-3.9-3.9a1 1 0 10-1.4 1.42l4.6 4.6a1 1 0 001.4 0l11-11z"></path>
+            </svg>
+            Smart Learning
           </a>
         </div>
         <div class="view-analytics">
           <a href="#" class="analytics-link" style="text-decoration: none; color: white; display: flex; align-items: center;">
-        <svg fill="white" height="16" viewBox="0 0 24 24" width="16" style="vertical-align: middle; margin-right: 4px;">
-          <path d="M3 17h2v-7H3v7zm4 0h2v-4H7v4zm4 0h2V7h-2v10zm4 0h2v-2h-2v2zm4 0h2v-10h-2v10z"></path>
-        </svg> View Analytics
+            <svg fill="white" height="16" viewBox="0 0 24 24" width="16" style="vertical-align: middle; margin-right: 4px;">
+              <path d="M3 17h2v-7H3v7zm4 0h2v-4H7v4zm4 0h2V7h-2v10zm4 0h2v-2h-2v2zm4 0h2v-10h-2v10z"></path>
+            </svg> View Analytics
           </a>
         </div>
         <div class="settings">
           <a href="#" class="settings-link" style="text-decoration: none; color: white; display: flex; align-items: center;">
-        <svg fill="white" height="16" viewBox="0 0 24 24" width="16" style="vertical-align: middle; margin-right: 4px;"></svg>
-              <svg fill="white" height="16" viewBox="0 0 24 24" width="16" style="vertical-align: middle; margin-right: 4px;">
-                <path d="M12 1a2 2 0 0 1 2 2v1.1a7.96 7.96 0 0 1 2.83 1.17l.78-.78a2 2 0 1 1 2.83 2.83l-.78.78A7.96 7.96 0 0 1 20.9 10H22a2 2 0 1 1 0 4h-1.1a7.96 7.96 0 0 1-1.17 2.83l.78.78a2 2 0 1 1-2.83 2.83l-.78-.78A7.96 7.96 0 0 1 14 20.9V22a2 2 0 1 1-4 0v-1.1a7.96 7.96 0 0 1-2.83-1.17l-.78.78a2 2 0 1 1-2.83-2.83l.78-.78A7.96 7.96 0 0 1 3.1 14H2a2 2 0 1 1 0-4h1.1a7.96 7.96 0 0 1 1.17-2.83l-.78-.78a2 2 0 1 1 2.83-2.83l.78.78A7.96 7.96 0 0 1 10 3.1V2a2 2 0 0 1 2-2zm0 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10z"></path>
-              </svg>
-              Settings
-            </a>
+            <svg fill="white" height="16" viewBox="0 0 24 24" width="16" style="vertical-align: middle; margin-right: 4px;"></svg>
+            <svg fill="white" height="16" viewBox="0 0 24 24" width="16" style="vertical-align: middle; margin-right: 4px;">
+              <path d="M12 1a2 2 0 0 1 2 2v1.1a7.96 7.96 0 0 1 2.83 1.17l.78-.78a2 2 0 1 1 2.83 2.83l-.78.78A7.96 7.96 0 0 1 20.9 10H22a2 2 0 1 1 0 4h-1.1a7.96 7.96 0 0 1-1.17 2.83l.78.78a2 2 0 1 1-2.83 2.83l-.78-.78A7.96 7.96 0 0 1 14 20.9V22a2 2 0 1 1-4 0v-1.1a7.96 7.96 0 0 1-2.83-1.17l-.78.78a2 2 0 1 1-2.83-2.83l.78-.78A7.96 7.96 0 0 1 3.1 14H2a2 2 0 1 1 0-4h1.1a7.96 7.96 0 0 1 1.17-2.83l-.78-.78a2 2 0 1 1 2.83-2.83l.78.78A7.96 7.96 0 0 1 10 3.1V2a2 2 0 0 1 2-2zm0 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10z"></path>
+            </svg>
+            Settings
+          </a>
+        </div>
       </div>
     </header>
     <div class="quiz-card hidden">
@@ -89,6 +93,18 @@
         </div>
         <span>0%</span>
       </div>
+    </div>
+  </div>
+  <div id="modals-container"></div>
+  <div class="modal">
+    <div class="modal-header">
+      <h2>New Achievement Unlocked!</h2>
+      <button class="close-modal">&times;</button>
+    </div>
+    <div class="modal-body">
+      <h3>Streak Master</h3>
+      <p>Achieve a streak of 10 correct answers.</p>
+      <img src="badges/streak_10.png" alt="Streak Master" style="width: 100px; height: 100px;" />
     </div>
   </div>
   <script>
