--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
     </header>
-    <div class="quiz-card hidden">
+    <div class="quiz-card visible">
       <div class="quiz-header">
         <div style="display: flex; justify-content: space-between; align-items: center; gap: 140px;">
           <div style="display: flex; align-items: center; gap: 8px;">
@@ -93,27 +93,6 @@
         </div>
         <span>0%</span>
       </div>
-    </div>
-  </div>
-  <div id="modals-container"></div>
-  <div class="modal">
-    <div class="modal-header">
-      <h2>New Achievement Unlocked!</h2>
-      <button class="close-modal">&times;</button>
-    </div>
-    <div class="modal-body">
-      <h3>Streak Master</h3>
-      <p>Achieve a streak of 10 correct answers.</p>
-      <img src="badges/streak_10.png" alt="Streak Master" style="width: 100px; height: 100px;" />
-    </div>
-  </div>
-  <div id="notification-container" class="notification-container hidden">
-    <div class="notification">
-      <h3>New Achievement Unlocked!</h3>
-      <p>Streak Master: Achieve a streak of 10 correct answers.</p>
-      <img src="badges/streak_10.png" alt="Streak Master" />
-    </div>
-  </div>
   <script>
     fetch('smart_questions_cleaned.json')
       .then(response => response.json())
