--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="question-icon">
           <svg fill="white" height="24" viewBox="0 0 24 24" width="24"><path d="M20.3 5.7a1 1 0 00-1.4-1.4L9 14.17l-3.9-3.9a1 1 0 10-1.4 1.42l4.6 4.6a1 1 0 001.4 0l11-11z"></path></svg>
         </div>
-        <div class="question-text" id="question">Question goes here</div>
+        <div class="question-text" id="question">Select Topic & "Start Quiz" to load Question!</div>
       </div>
       <div class="answers" id="answers"></div>
       <div class="feedback" id="feedback"></div>
