--- a/index.html
+++ b/index.html
@@ -72,11 +72,9 @@
     <div class="quiz-card visible">
       <div class="quiz-header">
         <div class="quiz-header-row">
-          <div class="topic-streak-bookmark">
-            <span>Topic: <strong></strong></span>
-            <span>Streak: <span id="quizStreak">0</span></span>
-            <button class="bookmark-btn">Bookmark</button>
-          </div>
+          <div class="header-topic"><span>Topic: <strong></strong></span></div>
+          <div class="header-streak"><span>Streak: <span id="quizStreak">0</span></span></div>
+          <div class="header-bookmark"><button class="bookmark-btn">Bookmark</button></div>
         </div>
       </div>
       <div class="question-block">
