--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <!-- Firestore -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script defer src="app.js"></script>
+<script defer src="app.js?v=2"></script>
 </head>
 <body>
   <div class="app-container">
