--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       </div>
       <div class="header-controls">
         <select class="control" data-topic>
-          <option value="" disabled selected>-- Select Topic --</option>
           <option value="unanswered">Unanswered Questions</option>
           <option value="missed">Missed Questions</option>
           <option value="bookmarked">Bookmarked Questions</option>
@@ -40,7 +39,7 @@
           <option value="20">20 Questions</option>
           <option value="all">All Questions</option>
         </select>
-        <button class="start-btn" enabled>Start Quiz</button>
+        <button class="start-btn" disabled>Start Quiz</button>
       </div>
       <div class="header-actions" style="display: flex; gap: 24px; align-items: center; justify-content: space-evenly;">
         <div class="smart-learning">
