--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <!-- Firestore -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script defer src="app.js?v=2"></script>
+  <script defer src="app.js?v=5"></script>
 </head>
 <body>
   <div class="app-container">
@@ -43,7 +43,7 @@
       </div>
       <div class="header-actions" style="display: flex; gap: 24px; align-items: center; justify-content: space-evenly;">
         <div class="smart-learning">
-          <a href="#" class="settings-link" style="text-decoration: none; color: white; display: flex; align-items: center;">
+          <a href="#" class="smart-learning-link" style="text-decoration: none; color: white; display: flex; align-items: center;">
             <svg fill="white" height="16" viewBox="0 0 24 24" width="16" style="vertical-align: middle; margin-right: 8px;">
               <path d="M20.3 5.7a1 1 0 00-1.4-1.4L9 14.17l-3.9-3.9a1 1 0 10-1.4 1.42l4.6 4.6a1 1 0 001.4 0l11-11z"></path>
             </svg>
