--- a/index.html
+++ b/index.html
@@ -69,19 +69,8 @@
       </div>
     </header>
     <div class="quiz-card visible">
-      <div class="quiz-header">
-        <div class="quiz-header-row">
-          <div class="header-topic"><span>Topic: <strong></strong></span></div>
-          <div class="header-streak"><span>Streak: <span id="quizStreak">0</span></span></div>
-          <div class="header-bookmark"><button class="bookmark-btn">Bookmark</button></div>
-        </div>
-      </div>
-      <div class="question-block">
-        <div class="question-icon">
-          <svg fill="white" height="24" viewBox="0 0 24 24" width="24"><path d="M20.3 5.7a1 1 0 00-1.4-1.4L9 14.17l-3.9-3.9a1 1 0 10-1.4 1.42l4.6 4.6a1 1 0 001.4 0l11-11z"></path></svg>
-        </div>
-        <div class="question-text" id="question">Select Topic & "Start Quiz" to load Question!</div>
-      </div>
+      <div class="quiz-header"></div>
+      <div class="question-text" id="question">Select Topic & "Start Quiz" to load Question!</div>
       <div class="answers" id="answers"></div>
       <div class="feedback" id="feedback"></div>
       <div class="progress-section">
@@ -98,5 +87,6 @@
         <button class="flag-unclear-btn" disabled>Flag as Unclear</button>
         <button class="report-btn" disabled>Report Question</button>
       </div>
+    </div>
 </body>
 </html>
