--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
           </div>
         </div>
         <div class="header-controls">
-          <select class="control" data-topic>
-            <option value="unanswered">Unanswered Questions</option>
-            <option value="missed">Missed Questions</option>
-            <option value="bookmarked">Bookmarked Questions</option>
-          </select>
+          <select class="control" data-topic></select>
           <select class="control" data-quiz-length>
             <option value="5">5 Questions</option>
             <option value="10">10 Questions</option>
